<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BearMod</string> 
        <string name="esp_line">Line</string>
        <string name="esp_bone">Bone</string>
        <string name="esp_info">Info</string>
        <string name="esp_weapon">Weapon</string>
        <string name="esp_grenade">Grenade Warning</string>
        <string name="aim_aimbot">AimBot</string>
        <string name="aim_ignore">IgnoreBot</string>
        <string name="aim_knocked">Aim-Knocked</string>
        <string name="skin_enable">Skin-Enable</string>
        <string name="deadbox">DeadBox (Ingame for open)</string>
   <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="_1_3_0">1.3</string>
    <string name="verifying">Verifying...</string>
    <string name="login">Login</string>
    <string name="automatic_login">Automatic login</string>
    <string name="remember_key">Remember Key</string>
    <string name="enter_license_key">Enter license key</string>
    <string name="login_to_continue">LOGIN TO CONTINUE</string>
    <string name="copy_paste_license_key">Copy/Paste License Key</string>
</resources>
